# openlab

./: .gitignore  README_COMPILING  compile_gateway_code.sh  iotlab.makefile
appli/: CMakeLists.txt
appli/education/distributed_algorithm/: CMakeLists.txt  README.md  TODO.md  algo_clock_convergence.py  algo_syncronous.py  algorithm_management.py  clock_convergence.c  clock_convergence.h  computing.c  config.h  main.c  management_script.py  parser.py  poisson_clock.c  poisson_clock.h  radio_network.c  radio_network.h
appli/education/distributed_algorithm/subject/: Makefile
appli/examples/tdma/: README.md  example_tdma_coord_static.c  example_tdma_node.c  example_tdma_node_cb.c
appli/iotlab/: CMakeLists.txt
appli/iotlab/autotest_common/: CMakeLists.txt
appli/iotlab/control_node/: CMakeLists.txt
appli/iotlab/control_node/control_node/: CMakeLists.txt  cn_autotest.c  cn_consumption.c  cn_control.c  cn_control.h  cn_radio.c  constants.h  main.c
appli/iotlab/control_node/control_node_fabien_old/: control_node.c
appli/iotlab/control_node/controlnode_clement/test/: iotlab-serial.py
appli/iotlab/drivers/: CMakeLists.txt  i2c_slave_fsm.dot  iotlab_i2c_common.h
appli/iotlab/lib/: CMakeLists.txt  generate_uid_dict.py  iotlab_gpio.c  iotlab_gpio.h  iotlab_leds.c  iotlab_leds.h  iotlab_time.c  iotlab_time.h  iotlab_uid_num_hashtable.c  iotlab_uid_num_hashtable.h  iotlab_uid_num_hashtable_fcts.c  zep_sniffer_format.c
appli/iotlab/lib/scripts/: generate_uid_dict.py
appli/iotlab/node_radio_characterization/: main.c
appli/iotlab/node_radio_characterization/run_characterization/: run_characterization.py  run_test.sh
appli/iotlab/open_node_m3_autotest/: CMakeLists.txt  main.c  uart_rx.h
appli/iotlab/open_node_m3_autotest_scanf/: CMakeLists.txt  main.c
appli/iotlab/periph/: CMakeLists.txt  i2c_slave_fsm.dot  iotlab_i2c_slave.c  iotlab_i2c_slave.h
appli/iotlab/periph/iotlab_i2c/: iotlab_i2c_.h
appli/iotlab_examples/: CMakeLists.txt
appli/iotlab_examples/gps_synced_sniffer/: CMakeLists.txt  README.md  TODO  zep_sniffer.c
appli/iotlab_examples/leds_chaser/: README.md  main.c
appli/iotlab_examples/nvram/: CMakeLists.txt
appli/iotlab_examples/robot_broadcaster/: CMakeLists.txt  robot_broadcaster.c
appli/iotlab_examples/simple_idle/: CMakeLists.txt  simple_idle.c
appli/iotlab_examples/simple_robot/: CMakeLists.txt  README.md  main.c  plot_imu.py
appli/iotlab_examples/smart_tiles/: CMakeLists.txt  README.md  detectpeak.c  detectpeak.h  detectpeak.py  main.c  plot_imu.py  radio_pinger.c
appli/iotlab_examples/tutorial/: CMakeLists.txt  README.md  main.c
appli/iotlab_tests/: CMakeLists.txt
appli/iotlab_tests/distributed_computing/: CMakeLists.txt  algorithm_management.py  computing.c  computing.c.save  computing.h  config.h  main.c  management_script.py  radio_network.c  radio_network.h  serial_aggregator.py
appli/iotlab_tests/foren6_sniffer/: foren6_sniffer.c  main.c
appli/iotlab_tests/m3_node_interract_cn/: CMakeLists.txt
appli/iotlab_tests/sonar/: CMakeLists.txt  README.md  main.c
appli/iotlab_tests/test_serial_flood/: serial_flood.c
appli/iotlab_tests/test_sniffer_acks/: CMakeLists.txt  main.c  sniffer.c  sniffer.h
appli/iotlab_tests/test_sniffer_acks/test_fw/: print_traces.py
appli/iotlab_tests/test_stack_overflow_scanf/: CMakeLists.txt  stack_overflow_scanf.c
appli/iotlab_tests/test_uids/: CMakeLists.txt  main.c
appli/iotlab_tests/tests_pps_nico/: CMakeLists.txt  computeCYCLESPERSEC.c  getTime.c  getTimeRadioRcv.c  getTimeRadioSnd.c  getTimeStats.c  sendTimeA8.c
appli/iotlab_tests/zep_sniffer/: CMakeLists.txt  README.md  main.c  send_absolute_time.py  serial2loopback.py  zep_sniffer.c
appli/sensbio_examples/: CMakeLists.txt
appli/sensbio_examples/synchro/: CMakeLists.txt  synchro.c
drivers/stm32/: uart.c
drivers/stm32f1xx/: stm32f1xx.c  stm32f1xx.h
lib/: iotlab_uid.h  soft_timer_delay.h
lib/event/: event.c
net/: mac_csma.h  phy.h
net/mac_csma/: mac_csma.c
net/phy_rf2xx/: phy_rf2xx.c  phy_rf2xx.h
periph/rf2xx/: rf2xx_regs.h
platform/fiteco-a8/: CMakeLists.txt  fiteco-a8.c  include.cmake
platform/fiteco-gwt/: include.cmake
platform/fiteco-m3/: fiteco-m3.c  include.cmake
platform/iotlab-a8-m3/: iotlab-a8-m3.c  iotlab-a8-m3_drivers.c
platform/iotlab-m3/: iotlab-m3.c  iotlab-m3_drivers.c
